# rp2040-menu

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: boot.rs  config.rs  display.rs  flash.rs  main.rs  sd.rs  tft.rs  uf2.rs  ui.rs
src/ui/: backend.rs  controller.rs  mod.rs
ui/: file.slint  main.slint
