[package]
edition = "2021"
name = "rp2040-menu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

ili9341 = "0.6.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = "0.3.0"
fugit = "0.3.7"
embedded-sdmmc = { version = "0.8.1", default-features = false, features = [
    "defmt-log",
] }

rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = { path = "../../Pico/rp2040-boot2" }
uf2_block = "0.1.0"
rp2040-flash = "0.6.0"
embedded-layout = "0.4.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
panic = "abort"

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = "abort"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
