[package]
edition = "2024"
name = "rp2040-menu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.8.0", default-features = false, features = [
    "rt",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
    "boot2-none",
] }
embassy-futures = { version = "0.1.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

panic-probe = { version = "1", features = ["print-defmt"] }

display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
fugit = "0.3.7"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [
    "defmt-log",
] }

rp2040-boot2 = { path = "../../Pico/rp2040-boot2" }
uf2_block = "0.1.0"
rp2040-flash = "0.6.0"
embedded-layout = "0.4.2"
assign-resources = "0.5.0"
lcd-async = "0.1.1"
static_cell = "2.1.1"
embedded-alloc = "0.6.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
panic = "abort"

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = "abort"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
